--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,26 @@
 *.class
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
 # Package Files #
-*.jar
+#*.jar
 *.war
 *.ear
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Gradle directories
+.gradle/
+build/
+
+# Eclipse files and directories
+#.metadata/
+#.settings/
+#.classpath
+#.project
+
+# IntelliJ files and directories
+#*.iml
+#*.ipr
+*.iws
+bin/
+out/
