--- a/caesar-spock/build.gradle
+++ b/caesar-spock/build.gradle
@@ -18,17 +18,19 @@ sourceSets*.java.srcDirs*.each { it.mkdirs() }
 }
 
 repositories {
-   //flatDir {
-   //    dirs '../libs'
-   //}
+   flatDir {
+       dirs '../libs'
+   }
 
-   mavenCentral()
+   //mavenCentral()
 }
 
 
 dependencies {
-    //testCompile 'junit:junit:4.11'
-	testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
+    testCompile 'junit:junit-dep:4.10'
+    testCompile 'org.hamcrest:hamcrest-core:1.3'
+    testCompile 'org.codehaus.groovy:groovy-all:2.0.5'
+    testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
 }
 
 //idea.project.ipr {
